<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.CCMSAndroid.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:scrollbars="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/llChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tv_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prompt_change_pass"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/et_cp_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/prompt_pass_old"
            android:hint="@string/prompt_pass_old"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cp_new1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/prompt_pass_new1"
            android:hint="@string/prompt_pass_new1"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cp_new2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/prompt_pass_new2"
            android:hint="@string/prompt_pass_new2"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_update_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/prompt_update_pass"
            android:textAllCaps="true"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</ScrollView>
