<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical"
        tools:context=".ProfileActivity">

        <TextView
            android:id="@+id/tv_profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pro_id"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/et_profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pro_email"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/et_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pro_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/pro_name"
            android:hint="@string/pro_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_profile_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pro_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_profile_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/pro_address"
            android:hint="@string/pro_address"
            android:inputType="text|textPostalAddress"
            android:singleLine="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/pro_update"
            android:textAllCaps="true"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</ScrollView>
