<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.CCMSAndroid.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:scrollbars="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical"
        tools:context=".RegistrationActivity">

        <TextView
            android:id="@+id/tv_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prompt_email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_reg_pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/prompt_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reg_pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_reg_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/prompt_conf_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reg_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/prompt_conf_password"
            android:hint="@string/prompt_conf_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/prompt_register"
            android:textAllCaps="true"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</ScrollView>
