<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".HomeActivity">

    <EditText
        android:id="@+id/et_complaint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/border_complaint_box"
        android:gravity="start"
        android:hint="@string/prompt_complaints"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/et_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/border_complaint_box"
        android:gravity="start"
        android:hint="@string/prompt_location"
        android:inputType="text"
        android:padding="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submit_complaint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_complaint" />

    <Button
        android:id="@+id/submit_complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:padding="15dp"
        android:text="@string/submit_complaint"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
